--- a/src/main/resources/assets/wicked_paintings/lang/en_us.json
+++ b/src/main/resources/assets/wicked_paintings/lang/en_us.json
@@ -2,5 +2,13 @@
   "text.autoconfig.wickedpaintings.title": "Wicked Paintings",
   "text.autoconfig.wickedpaintings.sendMode": "Image sending mode",
   "item.wickedpaintings.wicked_painting": "Wicked Painting",
-  "item.wickedpaintings.wicked_painting.tooltip": "Right click the air"
+  "item.wickedpaintings.wicked_painting.tooltip": "Right click the air",
+  "gui.wickedpaintings.load_button": "Load",
+  "gui.wickedpaintings.apply_button": "Apply",
+  "gui.wickedpaintings.url_placeholder": "Image URL",
+  "gui.wickedpaintings.image_width_placeholder": "",
+  "gui.wickedpaintings.image_height_placeholder": "",
+  "gui.wickedpaintings.image_width": "Painting width",
+  "gui.wickedpaintings.image_height": "Painting height",
+  "gui.wickedpaintings.url_label_invalid": "Invalid URL"
 }
