--- a/src/main/resources/assets/wicked_paintings/lang/en_us.json
+++ b/src/main/resources/assets/wicked_paintings/lang/en_us.json
@@ -1,16 +1,17 @@
 {
-  "text.autoconfig.wicked_paintings.title": "Wicked Paintings",
-  "text.autoconfig.wicked_paintings.sendMode": "Image sending mode",
+  "entity.wicked_paintings.wicked_painting": "Wicked Painting",
+  "gui.wicked_paintings.apply_button": "Apply",
+  "gui.wicked_paintings.image_height": "Painting height",
+  "gui.wicked_paintings.image_height_placeholder": "",
+  "gui.wicked_paintings.image_width": "Painting width",
+  "gui.wicked_paintings.image_width_placeholder": "",
+  "gui.wicked_paintings.load_button": "Load",
+  "gui.wicked_paintings.url_label_invalid": "Invalid URL",
+  "gui.wicked_paintings.url_placeholder": "Image URL",
   "item.wicked_paintings.wicked_painting": "Wicked Painting",
   "item.wicked_paintings.wicked_painting.tooltip": "Right click the air",
   "itemGroup.wicked_paintings.general": "Wicked Paintings",
-  "gui.wicked_paintings.load_button": "Load",
-  "gui.wicked_paintings.apply_button": "Apply",
-  "gui.wicked_paintings.url_placeholder": "Image URL",
-  "gui.wicked_paintings.image_width_placeholder": "",
-  "gui.wicked_paintings.image_height_placeholder": "",
-  "gui.wicked_paintings.image_width": "Painting width",
-  "gui.wicked_paintings.image_height": "Painting height",
-  "gui.wicked_paintings.url_label_invalid": "Invalid URL",
-  "text.autoconfig.wicked_paintings.option.enabled": "Render Wicked Paintings"
+  "text.autoconfig.wicked_paintings.option.enabled": "Render Wicked Paintings",
+  "text.autoconfig.wicked_paintings.sendMode": "Image sending mode",
+  "text.autoconfig.wicked_paintings.title": "Wicked Paintings"
 }
